# mokelumne

./: .dockerignore  .gitignore  Dockerfile  README.md  constraints.txt  docker-compose.ci.yml  docker-compose.yaml  docker-compose.yml  example.env  pyproject.toml  requirements.txt  webserver_config.py
.github/workflows/: build.yml
dags/: batch_image_description.md  download_tind_collection.py  fetch_images.py  fetch_tind_collection.py  fetch_tind_records.py  sample_dag.py  tind_filter.py
dags/helpers/: __init__.py  fetch_tind.py  tind.py  tind_filter_util.py  tind_xml_handler.py
keycloak/config/: berkeley-local.yaml
mokelumne/: __init__.py
mokelumne/batch_image/: __init__.py  assets.py
mokelumne/dags/: fetch_images.py  fetch_ldc_corpus_files.py  fetch_tind_records.py  gen_llm_image_descriptions.py  generate_image_descriptions.py  ldc.py  notify_user.py  summarise_job.py  tind_filter.py
mokelumne/oidc/: __init__.py  auth_manager.py  security_manager.py
mokelumne/providers/: __init__.py
mokelumne/util/: __init__.py  fetch_tind.py  image_describer.py  image_fetcher.py  langfuse.py  ldc.py  storage.py  tind.py  tind_csv_writer.py
one-off/: README.md  pyproject.toml  script.py
playwright/: Dockerfile  entrypoint.sh
plugins/: dag_run_file_browser.py  oidc_auth_oauth_view.py  oidc_remote_user_view.py  oidc_security_manager.py  static_files.py
postgres-init/: init-keycloak.sql
public/0486b8c7-ab80-41af-a990-8f0071e86d51/: imagedesc_fetched_20260512_203352.csv  imagedesc_processed_20260512_203352.csv  index.html
public/071d1799-72ba-40a9-a60b-3e9d2c9a0bbf/: imagedesc_fetched_20260514_192052.csv  imagedesc_processed_20260514_192052.csv  index.html  params.json
public/0c87b83f-b1c0-4ee0-93d2-870d90039190/: imagedesc_fetched_20260512_204704.csv  imagedesc_processed_20260512_204704.csv  index.html
public/0ff3c053-6352-41b1-a7c1-f3990338f06d/: imagedesc_fetched_20260505_204417.csv  imagedesc_processed_20260505_204417.csv  index.html
public/11d67e89-b46f-41f2-af0b-4c186831560d/: imagedesc_fetched_20260508_231348.csv  index.html
public/12df8a6b-faef-4d53-adb2-5a8ba5bff711/: index.html
public/16b79d5f-6371-4860-9c60-06ddc0bb2224/: imagedesc_fetched_20260514_032948.csv  imagedesc_processed_20260514_032948.csv  index.html
public/1f564074-2d05-4909-96c4-23317971e870/: imagedesc_fetched_20260505_185538.csv  imagedesc_processed_20260505_185538.csv  index.html
public/1fb6223a-41a9-4b80-96f2-4c5658573f57/: imagedesc_fetched_20260507_221048.csv  imagedesc_processed_20260507_221048.csv  index.html
public/255661f8-961b-4e8b-98a0-6e99d8fd9bb2/: imagedesc_processed_20260508_230726.csv  index.html
public/279dc0f0-f1cc-4088-bbcc-9ff36620311e/: imagedesc_fetched_20260505_213330.csv  imagedesc_processed_20260505_213330.csv  index.html
public/39fdf345-5ced-45d4-a29b-719dc8632a9d/: imagedesc_fetched_20260513_210332.csv  imagedesc_processed_20260513_210332.csv  index.html
public/4a27d7a5-3088-4f75-ba4a-3da34d41edea/: index.html  params.json
public/50a1cee6-8b59-47b1-80f4-651ba4bab0f2/: index.html
public/52216359-b0b9-42af-a4e2-468a45c402d5/: imagedesc_fetched_20260505_181330.csv  index.html
public/52de62d9-2a6f-4846-a95f-11828dc1772f/: imagedesc_fetched_20260507_022120.csv  imagedesc_processed_20260507_022120.csv  index.html
public/5c32ad43-e8ef-4e23-a10d-037a24bd8308/: imagedesc_fetched_20260513_202729.csv  imagedesc_processed_20260513_202729.csv  index.html
public/5f6b146b-8645-4873-a4f1-11559de345c6/: imagedesc_fetched_20260514_192631.csv  imagedesc_processed_20260514_192631.csv  index.html
public/60f28828-388e-42ba-8d0d-c0b2852aebbf/: imagedesc_fetched_20260507_022753.csv  imagedesc_processed_20260507_022753.csv  index.html
public/6343ac2a-5a56-4bd1-96f6-024a09c824e5/: imagedesc_fetched_20260506_215942.csv  imagedesc_processed_20260506_215942.csv  index.html
public/6827e3a5-b271-48c2-93bb-2aa5752110d3/: index.html
public/730fb20d-90db-411e-bbd0-fc9babe87118/: imagedesc_fetched_20260514_032337.csv  imagedesc_processed_20260514_032337.csv  index.html
public/75cf648b-5151-4b24-bc1a-6c9bd0b201ec/: imagedesc_fetched_20260514_162633.csv  imagedesc_skipped_20260514_162633.csv  index.html
public/76cdc1f5-24e8-4e0f-b4eb-59d131d1f555/: imagedesc_fetched_20260512_165313.csv  imagedesc_processed_20260512_165313.csv  index.html
public/776161f4-638d-4105-9e49-ce6c3feb07d5/: imagedesc_fetched_20260508_220941.csv  imagedesc_processed_20260508_220941.csv  index.html
public/7ea15b82-6377-4ebe-b591-b7ffa74d4dd3/: imagedesc_fetched_20260507_202311.csv  imagedesc_processed_20260507_202311.csv  index.html
public/9893cc43-afa7-4885-8e87-180ebe183434/: imagedesc_fetched_20260507_171345.csv  imagedesc_processed_20260507_171345.csv  index.html
public/a09860fd-13a5-4700-9ce6-7dac6589ef04/: imagedesc_fetched_20260507_204929.csv  imagedesc_processed_20260507_204929.csv  index.html
public/a1983516-63bc-43ce-8615-53f116b09500/: imagedesc_fetched_20260506_213753.csv  imagedesc_processed_20260506_213753.csv  index.html
public/b07cb73e-4763-4a55-a8e5-bba5886ab01e/: imagedesc_fetched_20260505_212452.csv  imagedesc_processed_20260505_212452.csv  index.html
public/b424354d-65d0-4f22-a137-d0b6c910f92a/: imagedesc_fetched_20260508_234030.csv  imagedesc_skipped_20260508_234030.csv  index.html
public/b48fecbe-9994-43b3-b00d-159986ac126d/: imagedesc_fetched_20260505_210636.csv  index.html
public/cddd5e75-8cc7-498a-bae1-6b57bb0d9bc2/: index.html
public/ce48d3db-7b79-4231-b817-64d02697aaf4/: index.html
public/d87ac173-dff9-426a-9aa2-22e854280610/: imagedesc_fetched_20260507_210810.csv  imagedesc_processed_20260507_210810.csv  index.html  params.json
public/efa74e6d-d0e8-4cc1-9075-5c995d4074fa/: imagedesc_fetched_20260512_203734.csv  imagedesc_processed_20260512_203734.csv  index.html  params.json
scripts/: setup_dev.py
test/: conftest.py  run_tests.py
(+39 files in other folders)
