[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "mokelumne"
version = "0.5.0"
dependencies = [
    "apache-airflow-task-sdk == 1.2.0",
    "langchain[aws]",
    "langfuse",
    "lxml",
    "pymarc",
    "python-tind-client @ git+https://github.com/BerkeleyLibrary/python-tind-client.git@0.2.1",
]
requires-python = ">= 3.12.12, < 3.14"
authors = [
    {name = "Anna Wilcox"},
    {name = "maría a. matienzo"},
    {name = "Jason Raitz"},
    {name = "Daniel Schmidt"},
]
readme = "README.md"
license = "MIT"

[project.optional-dependencies]
test = [
    "unittest-xml-reporting",
]
lint = [
    "mypy ~= 1.17.1",
    "pydoclint ~= 0.6.10",
    "pylint ~= 3.3",
]

[project.urls]
Repository = "https://github.com/BerkeleyLibrary/mokelumne"
Issues = "https://github.com/BerkeleyLibrary/mokelumne/issues"

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
warn_redundant_casts = true
warn_return_any = true

[tool.setuptools.packages.find]
include = ['mokelumne*']

[tool.pydoclint]
allow-init-docstring = true
skip-checking-raises = true
style = "sphinx"

[tool.pylint.messages_control]
disable = ["expression-not-assigned"]
